--- a/ia/machineLearning.html
+++ b/ia/machineLearning.html
@@ -50,23 +50,23 @@
                 <h2>Aplicaciones prácticas del Machine Learning</h2>
                 <p>El Machine Learning ha revolucionado una amplia gama de industrias, mejorando nuestras vidas de muchas maneras. Aquí hay algunas aplicaciones prácticas que podrían resultar familiares:</p>
                 <ol>
-                    <li>Recomendaciones en línea: Cuando ves sugerencias de películas, música o productos en sitios web como Netflix o Amazon, es probable que estés experimentando Machine Learning en acción. Estos sistemas aprenden de tus elecciones y las de otros usuarios para ofrecerte recomendaciones personalizadas.</li>
-                    <li>Asistentes de voz inteligentes: Siri, Alexa y Google Assistant son ejemplos de asistentes de voz impulsados por Machine Learning. Estos sistemas pueden entender tus comandos y preguntas cada vez mejor, gracias al aprendizaje continuo de patrones lingüísticos y contextuales.</li>
-                    <li>Detección de fraudes: En el mundo financiero, el Machine Learning se utiliza para detectar transacciones sospechosas y potenciales fraudes, ayudando a proteger tus cuentas bancarias.</li>
-                    <li>Medicina y diagnóstico: Los algoritmos de Machine Learning pueden analizar grandes cantidades de datos médicos, como imágenes de resonancias magnéticas o historiales clínicos, para ayudar a los profesionales de la salud a hacer diagnósticos más precisos y rápidos.</li>
+                    <li><marcador class="resaltado8">Recomendaciones en línea:</marcador> Cuando ves sugerencias de películas, música o productos en sitios web como Netflix o Amazon, es probable que estés experimentando Machine Learning en acción. Estos sistemas aprenden de tus elecciones y las de otros usuarios para ofrecerte recomendaciones personalizadas.</li>
+                    <li><marcador class="resaltado8">Asistentes de voz inteligentes:</marcador> Siri, Alexa y Google Assistant son ejemplos de asistentes de voz impulsados por Machine Learning. Estos sistemas pueden entender tus comandos y preguntas cada vez mejor, gracias al aprendizaje continuo de patrones lingüísticos y contextuales.</li>
+                    <li><marcador class="resaltado8">Detección de fraudes:</marcador> En el mundo financiero, el Machine Learning se utiliza para detectar transacciones sospechosas y potenciales fraudes, ayudando a proteger tus cuentas bancarias.</li>
+                    <li><marcador class="resaltado8">Medicina y diagnóstico:</marcador> Los algoritmos de Machine Learning pueden analizar grandes cantidades de datos médicos, como imágenes de resonancias magnéticas o historiales clínicos, para ayudar a los profesionales de la salud a hacer diagnósticos más precisos y rápidos.</li>
                 </ol>
                 <div class="blog-image-doble">
                     <img src="media/machine2.jpg" alt="">
                     <img src="media/machine3.jpg" alt="">
                 </div>
                 <h2>Conceptos clave</h2>
-                <ul style="list-style-type: circle;">
-                    <li>Algoritmo: Es una secuencia de pasos que una computadora sigue para resolver un problema o realizar una tarea específica.</li>
-                    <li>Datos de entrenamiento: Son los ejemplos que utilizamos para enseñar al algoritmo y permitirle aprender patrones y relaciones.</li>
-                    <li>Inteligencia Artificial: Es un campo de la informática que busca crear máquinas capaces de realizar tareas que normalmente requieren inteligencia humana.</li>
-                    <li>Predicción: Es la capacidad del algoritmo de hacer estimaciones o conjeturas sobre resultados futuros basados en datos históricos.</li>
-                    <li>Aprendizaje Supervisado: Es un tipo de entrenamiento donde el algoritmo recibe datos etiquetados con resultados conocidos y se necesita de ajustes para hacer predicciones precisas.</li>
-                    <li>Aprendizaje No Supervisado: Es un tipo de entrenamiento donde el algoritmo trabaja con datos no etiquetados y busca descubrir patrones y estructuras por sí mismo.</li>
+                <ul>
+                    <li><marcador class="resaltado4">Algoritmo:</marcador> Es una secuencia de pasos que una computadora sigue para resolver un problema o realizar una tarea específica.</li>
+                    <li><marcador class="resaltado4">Datos de entrenamiento:</marcador> Son los ejemplos que utilizamos para enseñar al algoritmo y permitirle aprender patrones y relaciones.</li>
+                    <li><marcador class="resaltado4">Inteligencia Artificial:</marcador> Es un campo de la informática que busca crear máquinas capaces de realizar tareas que normalmente requieren inteligencia humana.</li>
+                    <li><marcador class="resaltado4">Predicción:</marcador> Es la capacidad del algoritmo de hacer estimaciones o conjeturas sobre resultados futuros basados en datos históricos.</li>
+                    <li><marcador class="resaltado4">Aprendizaje Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo recibe datos etiquetados con resultados conocidos y se necesita de ajustes para hacer predicciones precisas.</li>
+                    <li><marcador class="resaltado4">Aprendizaje No Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo trabaja con datos no etiquetados y busca descubrir patrones y estructuras por sí mismo.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/machine5.jpg" alt="">
