--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -51,43 +51,43 @@
                 <h2>Aplicaciones</h2>
                 <p>El Deep Learning ha impulsado el progreso en diversas áreas y ha llevado a avances significativos en la sociedad. A continuación, se presentan algunas aplicaciones del Deep Learning que tal vez encuentres familiar:</p>
                 <ol>
-                    <li>Reconocimiento de voz y traducción: Los asistentes de voz, como Siri y Google Assistant, utilizan el Deep Learning para comprender mejor y responder a nuestras preguntas y comandos en diferentes idiomas.</li>
-                    <li>Visión por computadora: El Deep Learning es ampliamente utilizado en sistemas de reconocimiento facial, clasificación de imágenes y detección de objetos en fotos y videos.</li>
-                    <li>Vehículos autónomos: La conducción autónoma es posible gracias a redes neuronales profundas que analizan datos en tiempo real para tomar decisiones mientras conducen.</li>
-                    <li>Salud y medicina: Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</li>
+                    <li><marcador class="resaltado8">Reconocimiento de voz y traducción:</marcador> Los asistentes de voz, como Siri y Google Assistant, utilizan el Deep Learning para comprender mejor y responder a nuestras preguntas y comandos en diferentes idiomas.</li>
+                    <li><marcador class="resaltado8">Visión por computadora:</marcador> El Deep Learning es ampliamente utilizado en sistemas de reconocimiento facial, clasificación de imágenes y detección de objetos en fotos y videos.</li>
+                    <li><marcador class="resaltado8">Vehículos autónomos:</marcador> La conducción autónoma es posible gracias a redes neuronales profundas que analizan datos en tiempo real para tomar decisiones mientras conducen.</li>
+                    <li><marcador class="resaltado8">Salud y medicina:</marcador> Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</li>
                 </ol>
                 <div class="blog-image-grande">
                     <img src="media/transformers4.jpg" alt="">
                 </div>
                 <h2>Conceptos clave</h2>
                 <ul style="list-style-type: circle;">
-                    <li>Red Neuronal: Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</li>
-                    <li>Neurona Artificial: Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</li>
-                    <li>Entrenamiento: Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</li>
-                    <li>Capas Ocultas: Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</li>
-                    <li>Aprendizaje Profundo Supervisado: Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</li>
-                    <li>Backpropagation: Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
+                    <li><marcador class="resaltado4">Red Neuronal:</marcador> Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</li>
+                    <li><marcador class="resaltado4">Neurona Artificial:</marcador> Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</li>
+                    <li><marcador class="resaltado4">Entrenamiento:</marcador> Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</li>
+                    <li><marcador class="resaltado4">Capas Ocultas:</marcador> Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</li>
+                    <li><marcador class="resaltado4">Aprendizaje Profundo Supervisado:</marcador> Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</li>
+                    <li><marcador class="resaltado4">Backpropagation:</marcador> Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
                 </ul>
                 <h2>Diferencia entre Machine Learning y Deep Learning</h2>
                 <p>La principal diferencia entre Machine Learning y Deep Learning radica en su estructura y alcance dentro del campo de la inteligencia artificial.</p>
                 <br>
-                <ul style="list-style-type: square;">
-                    <li>Machine Learning (Aprendizaje Automático):</li>
+                <ul>
+                <h6>Machine Learning (Aprendizaje Automático):</h6>
                         <ol type="I">
-                            <li>Definición: El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</li>
-                            <li>Enfoque: El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</li>
-                            <li>Algoritmos: Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</li>
-                            <li>Capacidad de representación: Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</li>
-                            <li>Requerimientos de datos: El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</li>
+                            <li><marcador class="resaltado8">Definición:</marcador> El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</li>
+                            <li><marcador class="resaltado8">Enfoque:</marcador> El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</li>
+                            <li><marcador class="resaltado8">Algoritmos:</marcador> Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</li>
+                            <li><marcador class="resaltado8">Capacidad de representación:</marcador> Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</li>
+                            <li><marcador class="resaltado8">Requerimientos de datos:</marcador> El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</li>
                         </ol>
                 <br>        
-                    <li>Deep Learning (Aprendizaje Profundo):</li>
+                <h6>Deep Learning (Aprendizaje Profundo):</h6>
                         <ol type="I">
-                            <li>Definición: El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</li>
-                            <li>Enfoque: El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</li>
-                            <li>Redes Neuronales Profundas: En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</li>
-                            <li>Capacidad de representación: Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</li>
-                            <li>Requerimientos de datos: El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</li>
+                            <li><marcador class="resaltado8">Definición:</marcador> El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</li>
+                            <li><marcador class="resaltado8">Enfoque:</marcador> El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</li>
+                            <li><marcador class="resaltado8">Redes Neuronales Profundas:</marcador> En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</li>
+                            <li><marcador class="resaltado8">Capacidad de representación:</marcador> Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</li>
+                            <li><marcador class="resaltado8">Requerimientos de datos:</marcador> El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</li>
                 
                         </ol>
                 </ul>        
