--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -57,39 +57,39 @@
                 <p>Linux, Windows y macOS son tres sistemas operativos diferentes que tienen enfoques distintos, características únicas y bases de usuarios específicas. Aquí hay algunas diferencias clave entre ellos:</p>
                 <br>
                 <ul>
-                  <li><marcador class="resaltado2">Tipo de licencia:</marcador></li>
+                  <li><marcador class="resaltado9">Tipo de licencia:</marcador></li>
                     <ul>
-                      <li>Linux: Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</li>
-                      <li>Windows: Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</li>
-                      <li>macOS: Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</li>
+                      <li><marcador class="resaltado6">Linux:</marcador> Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</li>
+                      <li><marcador class="resaltado6">Windows:</marcador> Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</li>
+                      <li><marcador class="resaltado6">macOS:</marcador> Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</li>
                     </ul>
                 <br>    
-                  <li><marcador class="resaltado2">Interfaz de usuario:</marcador></li>
+                  <li><marcador class="resaltado9">Interfaz de usuario:</marcador></li>
                     <ul>
-                      <li>Linux: Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</li>
-                      <li>Windows: Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</li>
-                      <li>macOS: Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</li>
+                      <li><marcador class="resaltado6">Linux:</marcador> Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</li>
+                      <li><marcador class="resaltado6">Windows:</marcador> Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</li>
+                      <li><marcador class="resaltado6">macOS:</marcador> Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</li>
                     </ul>
                 <br>    
-                  <li><marcador class="resaltado2">Disponibilidad de software:</marcador></li>
+                  <li><marcador class="resaltado9">Disponibilidad de software:</marcador></li>
                     <ul>  
-                      <li>Linux: Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</li>
-                      <li>Windows: Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</li>
-                      <li>macOS: Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</li>
+                      <li><marcador class="resaltado6">Linux:</marcador> Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</li>
+                      <li><marcador class="resaltado6">Windows:</marcador> Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</li>
+                      <li><marcador class="resaltado6">macOS:</marcador> Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</li>
                     </ul>
                 <br>
-                  <li><marcador class="resaltado2">Compatibilidad de hardware:</marcador></li>
+                  <li><marcador class="resaltado9">Compatibilidad de hardware:</marcador></li>
                     <ul>
-                      <li>Linux: Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</li>
-                      <li>Windows: Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</li>
-                      <li>macOS: Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</li>
+                      <li><marcador class="resaltado6">Linux:</marcador> Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</li>
+                      <li><marcador class="resaltado6">Windows:</marcador> Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</li>
+                      <li><marcador class="resaltado6">macOS:</marcador> Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</li>
                     </ul>
                 <br>
-                  <li><marcador class="resaltado2">Uso en servidores y dispositivos móviles:</marcador></li>
+                  <li><marcador class="resaltado9">Uso en servidores y dispositivos móviles:</marcador></li>
                     <ul>
-                      <li>Linux: Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</li>
-                      <li>Windows: También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</li>
-                      <li>macOS: Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</li>
+                      <li><marcador class="resaltado6">Linux:</marcador> Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</li>
+                      <li><marcador class="resaltado6">Windows:</marcador> También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</li>
+                      <li><marcador class="resaltado6">macOS:</marcador> Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</li>
                     </ul>
                 </ul>
                 <div class="blog-image-doble">
@@ -647,7 +647,7 @@
                 <p>El comando chmod en Linux se utiliza para cambiar los permisos de archivos y directorios. Puedes modificar los permisos para permitir o restringir diferentes acciones a usuarios, grupos y otros en el sistema. La sintaxis básica del comando es la siguiente:</p>
                 <br>
                 <ul>
-                  <li><marcador class="resaltado4">Notación numérica:</marcador></li>
+                  <li><marcador class="resaltado8">Notación numérica:</marcador></li>
                     <ul>
                       <li>4: Lectura (r)</li>
                       <li>2: Escritura (w)</li>
@@ -675,7 +675,7 @@
                     </div>
                   <br>
                   <br>
-                  <li><marcador class="resaltado4">Notación alfabética:</marcador></li>
+                  <li><marcador class="resaltado8">Notación alfabética:</marcador></li>
                     <ul>
                       <li>u: Usuario (propietario)</li>
                       <li>g: Grupo</li>
@@ -704,7 +704,7 @@
                     </div>
                   <br>
                   <br>
-                  <li><marcador class="resaltado4">Opciones adicionales:</marcador></li>
+                  <li><marcador class="resaltado8">Opciones adicionales:</marcador></li>
                     <ul>
                       <li>'+': Añadir permiso.</li>
                       <li>'-': Quitar permiso.</li>
