--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -41,7 +41,7 @@
                 <div class="blog-image">
                     <img src="media/expresion1.png" alt="">
                 </div>
-                <h3>grep - Buscar Patrones</h3>
+                <h6>grep - Buscar Patrones</h6>
                 <p>grep se utiliza comúnmente para buscar patrones en archivos de texto. Aquí hay algunos ejemplos:</p>
                 <br>
                 <div class="contenedor">
@@ -199,7 +199,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>Búsqueda con Contexto</h3>
+                <h6>head y tail - Búsqueda con Contexto</h6>
                 <p>grep puede mostrar líneas antes o después de un patrón:</p>
                 <br>
                 <div class="contenedor">
@@ -231,7 +231,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>sed - Editar Texto con Expresiones Regulares</h3>
+                <h6>sed - Editar Texto con Expresiones Regulares</h6>
                 <p>sed es una herramienta poderosa para manipular texto con expresiones regulares:</p>
                 <br>
                 <div class="contenedor">
@@ -299,7 +299,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>awk - Procesamiento de Texto Basado en Columnas</h3>
+                <h6>awk - Procesamiento de Texto Basado en Columnas</h6>
                 <p>awk es una herramienta versátil para procesar texto, especialmente útil para archivos con formato tabular:</p>
                 <br>
                 <div class="contenedor">
@@ -358,7 +358,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>sort - Ordenar y Eliminar Duplicados</h3>
+                <h6>sort - Ordenar y Eliminar Duplicados</h6>
                 <p>sort puede ordenar líneas de texto y eliminar duplicados. Las expresiones regulares no son necesarias para sort, pero se pueden utilizar en combinación con otras herramientas:</p>
                 <br>
                 <div class="contenedor">
@@ -399,7 +399,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>xargs - Procesar Lotes de Entradas</h3>
+                <h6>xargs - Procesar Lotes de Entradas</h6>
                 <p>xargs permite procesar lotes de entradas. Aunque no utiliza expresiones regulares directamente, es útil en combinación con otras herramientas que lo hacen:</p>
                 <br>
                 <div class="contenedor">
@@ -449,7 +449,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>'>' y '>>' - Redireccionamiento de Salida</h3>
+                <h6>'>' y '>>' - Redireccionamiento de Salida</h6>
                 <ul>
                     <li>Redireccionar la salida estándar a un archivo (sobrescribir o crear)</li>
                 </ul>
@@ -497,7 +497,7 @@
                 </div>
                 <br>
                 <br>
-                <h3>sponge - Manipulación de Archivos Intermedia</h3>
+                <h6>sponge - Manipulación de Archivos Intermedia</h6>
                 <p>sponge es un comando útil para evitar problemas al redirigir la salida de un comando al mismo archivo que está siendo leído. Ayuda a resolver situaciones en las que el redireccionamiento podría causar un comportamiento inesperado.</p>
                 <br>
                 <div class="contenedor">
