--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -88,7 +88,7 @@
                 <p>Aquí están los pasos a seguir para cada método de instalación en caso de que tengas experiencia y no requieras un tutorial paso a paso:</p>
                 <br>
                 <ul>
-                    <li><marcador class="resaltado2">Instalación en Máquinas Virtuales</marcador></li>
+                    <li><marcador class="resaltado6">Instalación en Máquinas Virtuales</marcador></li>
                     <p>Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro, lo que te brinda un entorno aislado y seguro para probar Linux sin afectar tu sistema principal. Aquí están los pasos generales para instalar Linux en una máquina virtual:</p>
                     <ol>
                         <li>Elige un Software de Virtualización: Utiliza herramientas populares como VirtualBox, VMware o Hyper-V para crear y gestionar máquinas virtuales.</li>
@@ -99,7 +99,7 @@
                         <li>Finaliza la Instalación: Reinicia la VM y disfruta de tu nueva instalación de Linux en una máquina virtual.</li>
                     </ol>
                     <br>
-                    <li><marcador class="resaltado2">Instalación en Particiones de Disco</marcador></li>
+                    <li><marcador class="resaltado6">Instalación en Particiones de Disco</marcador></li>
                     <p>Instalar Linux en una partición de disco es una forma más permanente de usar el sistema. Aquí tienes los pasos básicos:</p>
                     <ol>
                         <li>Prepara una Partición: Redimensiona tu disco duro para crear espacio no asignado donde se instalará Linux.</li>
@@ -111,7 +111,7 @@
                         <li>Completa la Instalación: Sigue las instrucciones del instalador para finalizar la instalación.</li>
                     </ol>
                     <br>
-                    <li><marcador class="resaltado2">Instalación en USB</marcador></li>
+                    <li><marcador class="resaltado6">Instalación en USB</marcador></li>
                     <p>La instalación en un USB booteable es una forma conveniente de instalar Linux en una computadora sin necesidad de particionar el disco duro. Sigue estos pasos:</p>
                     <ol>
                         <li>Descarga la imagen ISO de la distribución de Linux que deseas instalar desde el sitio web oficial.</li>
@@ -135,18 +135,18 @@
                 </div>
                 <h2>Diferencias y Ventajas</h2>
                 <p>Cada método de instalación de Linux tiene sus propias características y ventajas. A continuación, detallamos las diferencias entre usar máquinas virtuales, particiones de disco y un USB booteable, junto con las ventajas específicas de la partición y las precauciones al usar un USB booteable:</p>
-                <ul>
-                    <li><marcador class="resaltado2">Máquinas Virtuales:</marcador></li>
+                <ul style="list-style-type: square;">
+                    <li><marcador class="resaltado8">Máquinas Virtuales:</marcador></li>
                     <ul>
                         <li>Diferencias: Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro. No afectan el sistema anfitrión y brindan un entorno aislado para probar Linux. La instalación se realiza en un archivo virtual, lo que facilita la eliminación o la duplicación.</li>
                         <li>Ventajas: No se modifican las particiones del sistema anfitrión, lo que garantiza la seguridad y evita conflictos con otros sistemas operativos. Puedes experimentar con múltiples distribuciones de Linux sin comprometer la estabilidad del sistema principal.</li>
                     </ul>
-                    <li><marcador class="resaltado2">Particiones de Disco:</marcador></li>
+                    <li><marcador class="resaltado8">Particiones de Disco:</marcador></li>
                     <ul>
                         <li>Diferencias: La instalación en particiones de disco crea una instalación nativa en una partición del disco duro. Puede ser un proceso más involucrado, ya que requiere la reorganización del espacio en disco y la configuración de particiones.</li>
                         <li>Ventajas: Obtienes un rendimiento óptimo, ya que Linux se ejecuta directamente en el hardware. Tienes acceso completo a los recursos del sistema y no estás limitado por la capa de virtualización. Puedes configurar tu sistema para que Linux sea el sistema operativo principal.</li>
                     </ul>
-                    <li><marcador class="resaltado2">USB:</marcador></li>
+                    <li><marcador class="resaltado8">USB:</marcador></li>
                     <ul>
                         <li>Diferencias: Instalar Linux desde un USB booteable implica arrancar tu computadora directamente desde el USB. No requiere particionar el disco duro.</li>
                         <li>Ventajas: Puedes probar Linux antes de comprometerte a una instalación permanente. Ideal para sistemas que no deseas modificar o que no te pertenecen. Es una forma de llevar tu sistema operativo y tus datos a cualquier lugar y ejecutarlo en diferentes computadoras y, al ejecutar tu sistema desde una unidad USB, evitas dejar rastros en la máquina anfitriona y tus datos quedan en la USB.También en una USB no afectará al sistema anfitrión, lo que es especialmente útil para probar diferentes distribuciones o entornos sin comprometer la instalación existente.</li>
